--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 VERSION         DESCRIPTION
 -----------------------------------------------------------------------------
+0.8.1         - Updated script to bash with multiple fixes
 0.8           - Multiple fixes (#67, #77)
               - IPv6 support (Sebastien Valat)
 0.7.8         - Fix for Issue #33, #34 and #35 contributed by Alexander
@@ -13,7 +14,7 @@ VERSION         DESCRIPTION
                 correctly.
 0.7.5         - Added Greg Kuchyt's knock_add script but updated to be a
                 generic IPTables helper that also deletes rules
-0.7.4         - Patches from Michael Göhler
+0.7.4         - Patches from Michael Gï¿½hler
                 - Updated gitignore to include additional autoconf files.
                 - Updated Makefile to fix deprecated warning on CPPFLAG
                   -D_BSD_SOURCE.
